--- a/scss/bitters/_variables.scss
+++ b/scss/bitters/_variables.scss
@@ -8,12 +8,18 @@ $header-font-family: $base-font-family;
 
 // Sizes
 ///////////////////////////////////////////////////////////////////////////////
-$base-font-size: 1.375rem;
+$base-font-size: 1.2rem;
 $base-line-height: $base-font-size * 1.618;
 $base-border-radius: em(3);
 
 // Colors
 ///////////////////////////////////////////////////////////////////////////////
+
+$dry-ice: #F0F0D8; //F0F2DD;
+$effervescence: #E2FF9E;
+$juice: #C4ED68;
+$pucker: #9ED54C;
+$lime: #59A80F;
 
 $creamy-cat: #F1E9BB;
 $lamp-shade: #F3C363;
@@ -35,18 +41,18 @@ $light-yellow: #FFF6BF;
 $light-green: #E6EFC2;
 
 // Body Color
-$base-body-color: $creamy-cat;
+$base-body-color: $dry-ice;
 
 //  Font Colors
 $base-font-color: $cocoa;
-$base-accent-color: $go-flow;
+$base-accent-color: $pucker;
 
 //  Text Link Colors
-$base-link-color: $base-accent-color;
+$base-link-color: $lime;
 $hover-link-color: darken($base-accent-color, 15);
 
 // Border color
-$base-border-color: $creamy-cat;
+$base-border-color: $lime;
 
 // Flash Colors
 $error-color: $light-red;
