Make home page responsive.

--- a/scss/bitters/_variables.scss
+++ b/scss/bitters/_variables.scss
@@ -15,7 +15,7 @@ $base-border-radius: em(3);
 // Colors
 ///////////////////////////////////////////////////////////////////////////////
 
-$dry-ice: #F0F0D8; //F0F2DD;
+$dry-ice: #F0F0D8;
 $effervescence: #E2FF9E;
 $juice: #C4ED68;
 $pucker: #9ED54C;
