--- a/scss/icons.scss
+++ b/scss/icons.scss
@@ -34,6 +34,10 @@
   text-transform: none;
 }
 
+.icon-resume:before {
+  color: $pucker;
+}
+
 .icon-resume:hover,
 .icon-blog:hover,
 .icon-floppy:hover,
