--- a/css/main.css
+++ b/css/main.css
@@ -245,6 +245,9 @@ input[type="submit"] {
   font-variant: normal;
   text-transform: none; }
 
+.icon-resume:before {
+  color: #9ED54C; }
+
 .icon-resume:hover, .icon-blog:hover, .icon-floppy:hover, .icon-dribbble:hover, .icon-github:hover, .icon-instagram:hover, .icon-linkedin:hover, .icon-twitter:hover {
   opacity: 0.6;
   text-shadow: 2px 2px 2px rgba(127, 127, 127, 0.3); }
@@ -298,25 +301,6 @@ footer {
     display: table;
     clear: both; }
 
-.footer-logo {
-  float: left;
-  display: block;
-  margin-right: 2.35765%;
-  width: 48.82117%;
-  margin-left: 25.58941%;
-  padding-bottom: 0; }
-  .footer-logo:last-child {
-    margin-right: 0; }
-  @media screen and (min-width: 40em) {
-    .footer-logo {
-      float: left;
-      display: block;
-      margin-right: 2.35765%;
-      width: 14.70196%;
-      margin-left: 42.64902%; }
-      .footer-logo:last-child {
-        margin-right: 0; } }
-
 .addendum {
   display: block;
   float: left;
@@ -324,7 +308,7 @@ footer {
   margin-right: 2.35765%;
   width: 82.94039%;
   margin-left: 8.5298%;
-  font-size: 0.8rem;
+  font-size: 0.87273rem;
   line-height: 1.2rem;
   color: #F0F0D8;
   text-align: center; }
@@ -426,20 +410,20 @@ header {
         margin-right: 0; } }
 
 h4 {
-  margin-bottom: 0.4854rem; }
+  margin-bottom: -0.4854rem; }
 
-.about {
+.about, .portfolio {
   display: block;
   float: left;
   display: block;
   margin-right: 2.35765%;
   width: 82.94039%;
   margin-left: 8.5298%; }
-  .about:after {
+  .about:after, .portfolio:after {
     content: "";
     display: table;
     clear: both; }
-  .about:last-child {
+  .about:last-child, .portfolio:last-child {
     margin-right: 0; }
 
 @media screen and (min-width: 40em)  {
@@ -459,8 +443,7 @@ h4 {
   float: left;
   display: block;
   margin-right: 2.35765%;
-  width: 82.94039%;
-  margin-top: 0; }
+  width: 82.94039%; }
   .resume-paragraph:last-child {
     margin-right: 0; }
 
@@ -470,36 +453,38 @@ h4 {
   margin-right: 2.35765%;
   width: 14.70196%;
   margin-right: 0;
-  margin-top: 1em; }
+  margin-top: 2em;
+  color: #59A80F; }
   .resume-link:last-child {
     margin-right: 0; }
-
-.works li {
-  margin-top: 1.9416rem; }
   @media screen and (min-width: 40em)  {
-    .works li {
-      float: left;
-      display: block;
-      margin-right: 2.35765%;
-      width: 48.82117%; }
-      .works li:last-child {
-        margin-right: 0; }
-      .works li:nth-child(2n) {
-        margin-right: 0; }
-      .works li:nth-child(2n+1) {
-        clear: left; } }
+    .resume-link {
+      margin-top: 1.5em; } }
+
+@media screen and (min-width: 53.75em)  {
+  .works li {
+    float: left;
+    display: block;
+    margin-right: 2.35765%;
+    width: 48.82117%; }
+    .works li:last-child {
+      margin-right: 0; }
+    .works li:nth-child(2n) {
+      margin-right: 0; }
+    .works li:nth-child(2n+1) {
+      clear: left; } }
 
 .work-image {
   float: left;
   display: block;
   margin-right: 2.35765%;
-  width: 100%; }
+  width: 100%;
+  margin-top: 1em; }
   .work-image:last-child {
     margin-right: 0; }
 
 .contact-form {
   display: block;
-  width: 100%;
   margin-top: 1.9416rem;
   padding-bottom: 1.9416rem;
   background: #F1E9BB;
@@ -522,14 +507,24 @@ h4 {
     clear: both; }
   .form-container:last-child {
     margin-right: 0; }
-
-.email-option {
-  float: left;
-  display: block;
-  margin-right: 2.35765%;
-  width: 48.82117%; }
-  .email-option:last-child {
-    margin-right: 0; }
+  @media screen and (min-width: 40em)  {
+    .form-container {
+      float: left;
+      display: block;
+      margin-right: 2.35765%;
+      width: 65.88078%;
+      margin-left: 17.05961%; }
+      .form-container:last-child {
+        margin-right: 0; } }
+  @media screen and (min-width: 53.75em)  {
+    .form-container {
+      float: left;
+      display: block;
+      margin-right: 2.35765%;
+      width: 48.82117%;
+      margin-left: 25.58941%; }
+      .form-container:last-child {
+        margin-right: 0; } }
 
 input[type="submit"] {
   float: left;
