--- a/css/main.css
+++ b/css/main.css
@@ -483,54 +483,50 @@ h4 {
   .work-image:last-child {
     margin-right: 0; }
 
-.contact-form {
+.contact {
   display: block;
   margin-top: 1.9416rem;
   padding-bottom: 1.9416rem;
   background: #F1E9BB;
   border-top: 4px solid #9ED54C; }
-  .contact-form:after {
+  .contact:after {
     content: "";
     display: table;
     clear: both; }
 
-.form-container {
+.contact-container {
   display: block;
   float: left;
   display: block;
   margin-right: 2.35765%;
   width: 82.94039%;
   margin-left: 8.5298%; }
-  .form-container:after {
+  .contact-container:after {
     content: "";
     display: table;
     clear: both; }
-  .form-container:last-child {
+  .contact-container:last-child {
     margin-right: 0; }
   @media screen and (min-width: 40em)  {
-    .form-container {
+    .contact-container {
       float: left;
       display: block;
       margin-right: 2.35765%;
       width: 65.88078%;
       margin-left: 17.05961%; }
-      .form-container:last-child {
+      .contact-container:last-child {
         margin-right: 0; } }
   @media screen and (min-width: 53.75em)  {
-    .form-container {
+    .contact-container {
       float: left;
       display: block;
       margin-right: 2.35765%;
       width: 48.82117%;
       margin-left: 25.58941%; }
-      .form-container:last-child {
+      .contact-container:last-child {
         margin-right: 0; } }
+  .contact-container p {
+    font-size: 1.44rem; }
 
-input[type="submit"] {
-  float: left;
-  display: block;
-  margin-right: 2.84259%;
-  width: 38.29445%;
-  margin-left: 61.70555%; }
-  input[type="submit"]:last-child {
-    margin-right: 0; }
+.mal {
+  color: #59A80F; }
